@@ -4,6 +4,8 @@
 BZFlag 1.12.0  (was 1.11.x)
 ---------------------------
 
+* Limit quick rejoins based on player names - Dave Rodgers
+* Modify reject messages to use strings - Dave Rodgers
 * Added 'options' section to world maps - Dave Rodgers
 * Added the '-set <name> <value>' option - Dave Rodgers
 * Throw away bad or early links in world files - Tim Riker
